# exectimeit

./: .gitignore  README.md  exectimeit.html  index.html  pyproject.toml  search.js  setup.cfg  setup.py
.github/workflows/: main.yml  publish.yml
docs/: exectime.html  index.html  search.js
docs/exectime/: timeit.html
examples/: simple.py
exectime/: __init__.py  timeit.py
exectimeit/: timeit.html
src/exectime/: __init__.py
src/exectimeit/: __init__.py  timeit.py
test/: __init__.py  test_exectime.py
