[project]
name = "exectimeit"
version = "0.2.0"
description = "Accurate Measurement of Small Execution Times"
authors = [{name = "Mário Antunes", email = "mariolpantunes@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'
