[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exectimeit"
version = "0.2.1"
description = "Accurate Measurement of Small Execution Times"
authors = [{name = "Mário Antunes", email = "mariolpantunes@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pynnmf" = ["py.typed"]

[tool.pyright]
venvPath = "."
venv = "venv"

[tool.ruff]
lint.ignore = ["E402"]
line-length = 120
